@@ -5,7 +5,7 @@ stages:
   - release
 
 default:
-  image: namboy94/ci-docker-environment:0.6.0
+  image: namboy94/ci-docker-environment:0.8.0
   before_script:
     - echo "$SERVER_ACCESS_KEY" > ~/.ssh/id_rsa
     - chmod 0600 ~/.ssh/id_rsa
@@ -26,6 +26,12 @@ stylecheck:
   tags: [docker]
   script:
     - python-codestyle-check
+
+type_check:
+  stage: test
+  tags: [docker]
+  script:
+    - python-static-type-check
 
 unittest:
   stage: test
